// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-30"
    >
      <div
        class="makeStyles-propertySectionLabel-33"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-36 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-28 makeStyles-style-31 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-30"
    >
      <div
        class="makeStyles-propertySectionLabel-33"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-36 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-28 makeStyles-style-31 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render a readOnly button 1`] = `
<div>
  <div
    class="makeStyles-propertySection-12"
  >
    <div
      class="makeStyles-propertySectionLabel-15"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-18 MuiTypography-subtitle2"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-10 makeStyles-style-13 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
      data-testid="ButtonLabel"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
    </button>
  </div>
</div>
`;

exports[`should render a readOnly button from widget properties 1`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-75"
    >
      <div
        class="makeStyles-propertySectionLabel-78"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-81 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-73 makeStyles-style-76 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        data-testid="ButtonLabel"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button 1`] = `
<div>
  <div
    class="makeStyles-propertySection-3"
  >
    <div
      class="makeStyles-propertySectionLabel-6"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-9 MuiTypography-subtitle2"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-1 makeStyles-style-4 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should render the button with empty style 1`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-57"
    >
      <div
        class="makeStyles-propertySectionLabel-60"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-63 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-55 makeStyles-style-58 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with help hint 1`] = `
<body>
  <div>
     
    <div
      class="makeStyles-propertySection-66"
    >
      <div
        class="makeStyles-propertySectionLabel-69"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-72 MuiTypography-subtitle2"
        >
          Label
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          title=""
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-64 makeStyles-style-67 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with style 1`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-48"
    >
      <div
        class="makeStyles-propertySectionLabel-51"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-54 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-46 makeStyles-style-49 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button without style 1`] = `
<body>
  <div>
    <div
      class="makeStyles-propertySection-39"
    >
      <div
        class="makeStyles-propertySectionLabel-42"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-45 MuiTypography-subtitle2"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-37 makeStyles-style-40 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="makeStyles-propertySection-21"
  >
    <div
      class="makeStyles-propertySectionLabel-24"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-27 MuiTypography-subtitle2"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-19 makeStyles-style-22 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="makeStyles-propertySection-21"
  >
    <div
      class="makeStyles-propertySectionLabel-24"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-27 MuiTypography-subtitle2"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-19 makeStyles-style-22 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
